bottom-section edited

--- a/index.html
+++ b/index.html
@@ -217,11 +217,19 @@
 
     <!-- bottom section -->
     <div class="container-fluid bottom-section">
-        <!-- <p>© TJ Slavoj Jeseník nad Odrou</p> -->
-        <h2>SLEDUJTE NÁS</h2>
-        <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346"><img
-                src="images/facebook-icon.png" alt="Facebook"></a>
-        <a href="https://www.instagram.com/slavoj_cz/"><img src="images/instagram-icon.png" alt="Instagram"></a>
+        <div class="container bottom-nav">
+            <nav>
+                <ul>
+                    <li>MUŽI</li>
+                    <li>DOROST</li>
+                    <li>ŽÁCI</li>
+                    <li>PŘÍPRAVKA</li>
+                    <li>KLUB</li>
+                    <li>KONTAKT</li>
+                </ul>
+            </nav>  
+            <div class="bottom-divider-line"></div>
+        </div>
     </div>
 
 </body>
