edited bottom section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>TJ Slavoj</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style-1.scss'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -128,7 +128,8 @@
                         <div class="result-date">12/8/2021</div>
                     </div>
                 </a>
-                <button class="results-bottom-button" onclick="openPageWithSection('muzi','resultTable')">VŠECHNY VÝSLEDKY</button>
+                <button class="results-bottom-button" onclick="openPageWithSection('muzi','resultTable')">VŠECHNY
+                    VÝSLEDKY</button>
             </div>
         </div>
     </div>
@@ -154,7 +155,8 @@
                     <div class="next-match-col">
                         <img src="images/stary-jicin.png" alt="Girl in a jacket" width="100" height="100">
                     </div>
-                    <a href="#" class="next-match-all" onclick="openPageWithSection('muzi','resultTable')">ROZPIS<span class="arrow-next-match">&raquo;</span></a>
+                    <a href="#" class="next-match-all" onclick="openPageWithSection('muzi','resultTable')">ROZPIS<span
+                            class="arrow-next-match">&raquo;</span></a>
                 </div>
                 <div class="match-results-divider-line"></div>
                 <div class="next-match-card">
@@ -227,10 +229,45 @@
                     <li>KLUB</li>
                     <li>KONTAKT</li>
                 </ul>
-            </nav>  
+            </nav>
+
             <div class="bottom-divider-line"></div>
-        </div>
+
+            <div class="social-sites">
+                <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346">
+                    <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com/slavoj_cz/">
+                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                </a>
+                <i class="fa fa-youtube fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+            </div>
+
+            
+            <div class="comp-info">
+                <i class="fa fa-map-marker"></i> 
+                Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
+                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
+                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000
+            </div>
+            <div class="contact-info">
+                <div class="phone">
+                    <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;+420 789 456 423
+                </div>
+                <div class="mail">
+                    <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;&nbsp;slavoj@jeseniknadodrou.cz
+                </div>
+            </div>
+
+            <div class="copyright">
+                © 2021 TJ Slavoj Jeseník nad Odrou
+            </div>
+
+
+    </div>
     </div>
 
 </body>
+
 </html>
