--- a/klub.html
+++ b/klub.html
@@ -10,6 +10,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style-1.scss'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -57,19 +58,62 @@
     </div>
 
 
-<div></div>
+    <div></div>
 
     <!-- sponsors section -->
     <div class="sponsors">
         <!-- remaining logos of sponsors -->
     </div>
     <!-- bottom section -->
+    <!-- bottom section -->
     <div class="container-fluid bottom-section">
-        <!-- <p>© TJ Slavoj Jeseník nad Odrou</p> -->
-        <h2>SLEDUJTE NÁS</h2>
-        <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346"><img
-                src="images/facebook-icon.png" alt="Facebook"></a>
-        <a href="https://www.instagram.com/slavoj_cz/"><img src="images/instagram-icon.png" alt="Instagram"></a>
+        <div class="container bottom-nav">
+            <nav>
+                <ul>
+                    <li>MUŽI</li>
+                    <li>DOROST</li>
+                    <li>ŽÁCI</li>
+                    <li>PŘÍPRAVKA</li>
+                    <li>KLUB</li>
+                    <li>KONTAKT</li>
+                </ul>
+            </nav>
+
+            <div class="bottom-divider-line"></div>
+
+            <div class="social-sites">
+                <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346">
+                    <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com/slavoj_cz/">
+                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                </a>
+                <i class="fa fa-youtube fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+            </div>
+
+
+            <div class="comp-info">
+                <i class="fa fa-map-marker"></i>
+                Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
+                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
+                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000
+            </div>
+            <div class="contact-info">
+                <div class="phone">
+                    <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;+420 789 456 423
+                </div>
+                <div class="mail">
+                    <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;&nbsp;slavoj@jeseniknadodrou.cz
+                </div>
+            </div>
+
+            <div class="copyright">
+                © 2021 TJ Slavoj Jeseník nad Odrou
+            </div>
+
+
+        </div>
     </div>
 
 </body>
