--- a/pripravka.html
+++ b/pripravka.html
@@ -10,6 +10,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style-1.scss'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -225,105 +226,129 @@
                     <tbody>
                         <tr>
                             <th scope="row">1.</th>
-                            <td class="text-left"><img src="images/stary-jicin.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FK Starý Jičín</td>
+                            <td class="text-left"><img src="images/stary-jicin.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FK Starý Jičín</td>
                             <td class="text-center">4</td>
                             <td class="text-center">16:6</td>
                             <td class="text-center">12</td>
                         </tr>
                         <tr>
                             <th scope="row">2.</th>
-                            <td class="text-left"><img src="images/ticha.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">Sportovní Klub Tichá</td>
+                            <td class="text-left"><img src="images/ticha.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">Sportovní Klub Tichá
+                            </td>
                             <td class="text-center">5</td>
                             <td class="text-center">15:5</td>
                             <td class="text-center">12</td>
                         </tr>
                         <tr class="home-club">
                             <th scope="row">3.</th>
-                            <td class="text-left"><img src="images/logo.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Slavoj Jeseník nad Odrou</td>
+                            <td class="text-left"><img src="images/logo.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Slavoj Jeseník
+                                nad Odrou</td>
                             <td class="text-center">4</td>
                             <td class="text-center">12:3</td>
                             <td class="text-center">10</td>
                         </tr>
                         <tr>
                             <th scope="row">4.</th>
-                            <td class="text-left"><img src="images/liskovec.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Lískovec</td>
+                            <td class="text-left"><img src="images/liskovec.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Lískovec
+                            </td>
                             <td class="text-center">5</td>
                             <td class="text-center">10:9</td>
                             <td class="text-center">9</td>
                         </tr>
                         <tr>
                             <th scope="row">5.</th>
-                            <td class="text-left"><img src="images/koprivnice.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FC Kopřivnice</td>
+                            <td class="text-left"><img src="images/koprivnice.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FC Kopřivnice</td>
                             <td class="text-center">5</td>
                             <td class="text-center">20:6</td>
                             <td class="text-center">8</td>
                         </tr>
                         <tr>
                             <th scope="row">6.</th>
-                            <td class="text-left"><img src="images/kozlovice.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FC Kozlovice</td>
+                            <td class="text-left"><img src="images/kozlovice.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FC Kozlovice</td>
                             <td class="text-center">5</td>
                             <td class="text-center">13:11</td>
                             <td class="text-center">7</td>
                         </tr>
                         <tr>
                             <th scope="row">7.</th>
-                            <td class="text-left"><img src="images/frycovice.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Fryčovice</td>
+                            <td class="text-left"><img src="images/frycovice.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Fryčovice
+                            </td>
                             <td class="text-center">4</td>
                             <td class="text-center">7:5</td>
                             <td class="text-center">7</td>
                         </tr>
                         <tr>
                             <th scope="row">8.</th>
-                            <td class="text-left"><img src="images/morkov.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Mořkov Fotbal</td>
+                            <td class="text-left"><img src="images/morkov.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Mořkov Fotbal
+                            </td>
                             <td class="text-center">5</td>
                             <td class="text-center">12:13</td>
                             <td class="text-center">7</td>
                         </tr>
                         <tr>
                             <th scope="row">9.</th>
-                            <td class="text-left"><img src="images/skotinice.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Skotnice</td>
+                            <td class="text-left"><img src="images/skotinice.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Skotnice
+                            </td>
                             <td class="text-center">5</td>
                             <td class="text-center">9:16</td>
                             <td class="text-center">5</td>
                         </tr>
                         <tr>
                             <th scope="row">10.</th>
-                            <td class="text-left"><img src="images/ostravice.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Ostravice</td>
+                            <td class="text-left"><img src="images/ostravice.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Sokol Ostravice
+                            </td>
                             <td class="text-center">5</td>
                             <td class="text-center">12:14</td>
                             <td class="text-center">4</td>
                         </tr>
                         <tr>
                             <th scope="row">11.</th>
-                            <td class="text-left"><img src="images/spalov.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Spálov</td>
+                            <td class="text-left"><img src="images/spalov.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">TJ Spálov</td>
                             <td class="text-center">5</td>
                             <td class="text-center">8:10</td>
                             <td class="text-center">4</td>
                         </tr>
                         <tr>
                             <th scope="row">12.</th>
-                            <td class="text-left"><img src="images/verovice.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">AFC Veřovice</td>
+                            <td class="text-left"><img src="images/verovice.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">AFC Veřovice</td>
                             <td class="text-center">4</td>
                             <td class="text-center">6:9</td>
                             <td class="text-center">3</td>
                         </tr>
                         <tr>
                             <th scope="row">13.</th>
-                            <td class="text-left"><img src="images/vlcovice.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FC Vlčovice - Mniší</td>
+                            <td class="text-left"><img src="images/vlcovice.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FC Vlčovice - Mniší
+                            </td>
                             <td class="text-center">5</td>
                             <td class="text-center">4:23</td>
                             <td class="text-center"">3</td>
                         </tr>
                         <tr>
-                            <th scope="row">14.</th>
-                            <td class="text-left"><img src="images/tisek.png" class="img-flud" style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FK Tísek</td>
+                            <th scope=" row">14.</th>
+                            <td class="text-left"><img src="images/tisek.png" class="img-flud"
+                                    style=" max-width: 20px; max-height: 20px; margin-right: 10px;">FK Tísek</td>
                             <td class="text-center">5</td>
                             <td class="text-center">5:19</td>
                             <td class="text-center">1</td>
                         </tr>
                     </tbody>
                 </table>
-                <button onclick="location.href='https://souteze.fotbal.cz/turnaje/table/34dbaa16-f650-4a96-85f4-16f6d83ed1da'" class="results-bottom-button">DETAILNÍ TABULKA</button>
+                <button
+                    onclick="location.href='https://souteze.fotbal.cz/turnaje/table/34dbaa16-f650-4a96-85f4-16f6d83ed1da'"
+                    class="results-bottom-button">DETAILNÍ TABULKA</button>
             </div>
         </div>
 
@@ -419,7 +444,9 @@
                         </tr>
                     </tbody>
                 </table>
-                <button onclick="location.href='https://souteze.fotbal.cz/turnaje/zapas/34dbaa16-f650-4a96-85f4-16f6d83ed1da'" class="results-bottom-button">ROZPIS VŠECH ZÁPASŮ</button>
+                <button
+                    onclick="location.href='https://souteze.fotbal.cz/turnaje/zapas/34dbaa16-f650-4a96-85f4-16f6d83ed1da'"
+                    class="results-bottom-button">ROZPIS VŠECH ZÁPASŮ</button>
             </div>
         </div>
 
@@ -431,19 +458,62 @@
     </div>
 
 
-<div></div>
+    <div></div>
 
     <!-- sponsors section -->
     <div class="sponsors">
         <!-- remaining logos of sponsors -->
     </div>
     <!-- bottom section -->
+    <!-- bottom section -->
     <div class="container-fluid bottom-section">
-        <!-- <p>© TJ Slavoj Jeseník nad Odrou</p> -->
-        <h2>SLEDUJTE NÁS</h2>
-        <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346"><img
-                src="images/facebook-icon.png" alt="Facebook"></a>
-        <a href="https://www.instagram.com/slavoj_cz/"><img src="images/instagram-icon.png" alt="Instagram"></a>
+        <div class="container bottom-nav">
+            <nav>
+                <ul>
+                    <li>MUŽI</li>
+                    <li>DOROST</li>
+                    <li>ŽÁCI</li>
+                    <li>PŘÍPRAVKA</li>
+                    <li>KLUB</li>
+                    <li>KONTAKT</li>
+                </ul>
+            </nav>
+
+            <div class="bottom-divider-line"></div>
+
+            <div class="social-sites">
+                <a href="https://www.facebook.com/TJ-Slavoj-Jesen%C3%ADk-nad-Odrou-111503132289346">
+                    <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com/slavoj_cz/">
+                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                </a>
+                <i class="fa fa-youtube fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+            </div>
+
+
+            <div class="comp-info">
+                <i class="fa fa-map-marker"></i>
+                Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
+                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
+                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000
+            </div>
+            <div class="contact-info">
+                <div class="phone">
+                    <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;+420 789 456 423
+                </div>
+                <div class="mail">
+                    <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;&nbsp;slavoj@jeseniknadodrou.cz
+                </div>
+            </div>
+
+            <div class="copyright">
+                © 2021 TJ Slavoj Jeseník nad Odrou
+            </div>
+
+
+        </div>
     </div>
 
 </body>
