edited favicon and subsection background

--- a/muzi.html
+++ b/muzi.html
@@ -7,6 +7,7 @@
     <title>TJ Slavoj</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -50,6 +51,8 @@
                     <li><a href="pripravka.html">PŘÍPRAVKA</a></li>
                     <li><a href="klub.html">KLUB</a></li>
                     <li><a href="kontakt.html">KONTAKT</a></li>
+                    <li><a href="https://www.jeseniknadodrou.cz/obcan/sluzby/ubytovani/turisticka-ubytovna-tj-slavoj-56cs.html">UBYTOVNA</a></li>
+
                 </ul>
             </div>
             <span class="navTrigger">
