--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>TJ Slavoj Jeseník nad Odrou</title>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="shortcut icon" href="/Cms_Data/Sites/fotbalstaryjicin/Files/favicon.ico">
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -57,6 +56,7 @@
                     <li><a href="pripravka.html">PŘÍPRAVKA</a></li>
                     <li><a href="klub.html">KLUB</a></li>
                     <li><a href="kontakt.html">KONTAKT</a></li>
+                    <li><a href="https://www.jeseniknadodrou.cz/obcan/sluzby/ubytovani/turisticka-ubytovna-tj-slavoj-56cs.html">UBYTOVNA</a></li>
                 </ul>
             </div>
             <span onclick="openMobileMenu()" class="navTrigger">
@@ -277,8 +277,7 @@
             <div class="comp-info">
                 <i class="fa fa-map-marker"></i>
                 Jeseník nad Odrou 235, 742 33 Jeseník nad Odrou, Česká republika
-                <!-- &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>000000
-                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>DIČ:</strong>000000 -->
+                &nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;<strong>IČ:</strong>14614405
             </div>
             <div class="contact-info">
                 <div class="phone">
