edited contact section

--- a/dorost.html
+++ b/dorost.html
@@ -73,7 +73,7 @@
         <div id="Home" class="tabcontent">
             <div class="table-wrapper">
                 <div class="player-type">
-                    <h2>BRANKÁŘI</h2>
+                    <h2>Brankáři</h2>
                 </div>
                 <table class="table">
                     <thead>
@@ -101,7 +101,7 @@
                 </table>
 
                 <div class="player-type">
-                    <h2>OBRÁNCI</h2>
+                    <h2>Obránci</h2>
                 </div>
                 <table class="table">
                     <thead>
@@ -141,7 +141,7 @@
                 </table>
 
                 <div class="player-type">
-                    <h2>ZÁLOŽNÍCI</h2>
+                    <h2>Záložníci</h2>
                 </div>
                 <table class="table">
                     <thead>
@@ -181,7 +181,7 @@
                 </table>
 
                 <div class="player-type">
-                    <h2>ÚTOČNÍCI</h2>
+                    <h2>Útočníci</h2>
                 </div>
 
                 <table class="table">
