--- a/muzi.html
+++ b/muzi.html
@@ -77,7 +77,7 @@
         <div id="Home" class="tabcontent">
             <div class="table-wrapper">
                 <div class="player-type">
-                    <h2>BRANKÁŘI</h2>
+                    <h2>Brankáři</h2>
                 </div>
                 <table class="table">
                     <thead>
@@ -105,7 +105,7 @@
                 </table>
 
                 <div class="player-type">
-                    <h2>OBRÁNCI</h2>
+                    <h2>Obránci</h2>
                 </div>
                 <table class="table">
                     <thead>
@@ -145,7 +145,7 @@
                 </table>
 
                 <div class="player-type">
-                    <h2>ZÁLOŽNÍCI</h2>
+                    <h2>Záložníci</h2>
                 </div>
                 <table class="table">
                     <thead>
@@ -185,7 +185,7 @@
                 </table>
 
                 <div class="player-type">
-                    <h2>ÚTOČNÍCI</h2>
+                    <h2>Útočníci</h2>
                 </div>
 
                 <table class="table">
