--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- next matches section -->
     <div class="next-matches-section">
         <div class="container next-matches-title">
-            <h2>DALŠÍ ZÁPAS</h2>
+            <h2>Další zápas</h2>
         </div>
         <div class="container">
             <div class="next-match-wrap">
