last version before using project for school purposes

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="result-date">12/8/2021</div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="pripravka.html">
                     <div class="result-images">
                         <div class="pripravka">
                         </div>
