--- a/kontakt.html
+++ b/kontakt.html
@@ -145,7 +145,8 @@
                 <div class="map-responsive">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2585.089821213136!2d17.90249361570131!3d49.6149112793688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713c000832b0fbd%3A0x89699a168457be6f!2sJesen%C3%ADk%20nad%20Odrou%20235%2C%20742%2033%20Jesen%C3%ADk%20nad%20Odrou!5e0!3m2!1scs!2scz!4v1633946610311!5m2!1scs!2scz"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                    </iframe>
                 </div>
             </div>
         </div>
