countdown timer added

--- a/index.html
+++ b/index.html
@@ -162,10 +162,12 @@
                         <h3>FK Starý Jičín</h3>
                         <h2>18/9/2021</h2>
                         <h1>14:00</h1>
+                        
                     </div>
                     <div class="next-match-col">
                         <img src="images/stary-jicin.png" alt="Girl in a jacket" width="100" height="100">
                     </div>
+                    <div class="remaining-time" id="remaining-time"></div>
                     <a href="#" class="next-match-all" onclick="openPageWithSection('muzi','resultTable')">ROZPIS<span
                             class="arrow-next-match">&raquo;</span></a>
                 </div>
